src/static/style.css
/* ----- GENERAL STYLING ----- */




/* ----- NAVBAR STYLING ----- */

/* Google Fonts Link*/
@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200&family=Oswald:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");


.navbar-active {
    color: #3fbd78;
    border-bottom: 1px solid #e5e5e5;
    border-top: 1px solid #e5e5e5;
    box-shadow: 0 1px 0 rgba(0, 0, 0, .1);
}

/* reversing search to top position in hamburger menu */
@media (max-width: 1250px){
.searchbar{
    order: -1;
}
}

.navbar-brand {
    font-family: 'Pacifico', cursive;
    font-weight: 300;
    font-size: 35px;
    color: whitesmoke;
}

.navbar-custom {
    background-color: #3fbd78;
}

.color-text {
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 50px;
    background-color: whitesmoke;
}

.bx-menu {
    color: white;
    background: white;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 38px;

}

.nav-link {

    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    background: white;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}

.dropdown-menu {
    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
}

/* Downsizing Navbar */

@media (max-width: 1385px) {

    .color-text {
        font-size: 30px;   
    }
    .nav-link{
        font-size:13px;
    }
}


@media (min-width: 1250px){
    .navbar-expand-custom {
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: flex-start;
    }

    .navbar-expand-custom .navbar-nav {
        flex-direction: row;
       
    }

    .navbar-expand-custom .navbar-nav .nav-link {
        padding-right: .5rem;
        padding-left: .5rem;
    }

    .navbar-expand-custom .navbar-collapse {
        display: flex !important;
    }

    .navbar-expand-custom .navbar-toggler {
        display: none;
    }
}






/* ----- BODY STYLING ----- */


body {
    background-color: #e7e5e5a1;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
}

section {
    text-decoration: none;
    padding-left: 6px;
    padding-right: 6px;
}

.img-fluid {
    width: 100%;
    height: auto;
}

.pagination {
    margin: 1%;
    font-size: 16px;
    font-weight: 600;
    justify-content: center;
    border-radius: 0.5rem;
}

.card {
    width: 100%;
    justify-content: center;
    text-align: center;
    border-radius: 0.5rem;
    overflow: hidden;
    padding: 1%;
    margin: 1%;
}

._embed_video_left-wrapper new {
    display: none !important;
}

.container-bg {
    background-image: url('Hot_zone4.png');
    border-radius: 0.5rem;
    background-repeat: repeat space;
    background-color: rgb(255, 193, 7);
    -webkit-box-shadow: -2px 2px 40px -7px rgba(126, 126, 126, 1);
    -moz-box-shadow: -2px 2px 40px -7px rgba(126, 126, 126, 1);
    box-shadow: -2px 2px 40px -7px rgba(126, 126, 126, 1);

    /* green color same as banner image: */
    /* background-color: #3a685d;   */
}

.container-fluid {
    display: flex;
    align-items: center;
    justify-content: center;
}

iframe {
    /* max-width: 100% !important; */
    width: 100% !important;
    /* min-width: auto !important; */
}

/*  BACK TO THE TOP BUTTON */
#button {
    display: inline-block;
    background-color: transparent;
    width: 50px;
    height: 50px;
    text-align: center;
    border-radius: 4px;
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: background-color .3s, opacity .5s, visibility .5s;
    opacity: 0;
    visibility: hidden;
    z-index: 1000;
}

#button::after {
    content: "\f077";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    font-size: 2em;
    line-height: 50px;
    color: #3a685d;

}

#button:hover {
    cursor: pointer;
    background-color: rgb(252, 249, 249);
}

#button:active {
    background-color: #555;
}

#button.show {
    opacity: 1;
    visibility: visible;
}



/* SEARCH BAR */

/* .form-control-borderless {
    border: none;
}

.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
    border: none;
    outline: none;
    box-shadow: none;
} */

.textinput {
    border-radius: 0.2rem;
    border: #555 solid 0.1px;
}

/* optional search icon */

.bx-search {
    color: rgb(214, 218, 9);
}



/* ----- FOOTER ----- */


.tm-footer-links>li {
    margin-bottom: 10px;
}


/* ----- ADMIN STYLE ----- */

